--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,12 @@ font-family: 'Righteous', cursive;
 /*rgba(0,0,0,0.6)*/
 
 header {
-    background-image: url(../img/crayonBg.jpg);
+    background: url(../img/crayonBg.jpg) no-repeat;
     background-size: cover;
     height:350px;
     display: flex;
     justify-content: center;
+    margin-top: 95px;
 }
 
 body {
@@ -53,7 +54,15 @@ ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 15px;
+    padding: 10px 0;
+    background-color: #ededed;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    height: fit-content;
+    width: 100%;
+    box-shadow: 0px 0px 32px 0px rgba( 31, 38, 135, 0.37 );
+    margin: auto;
 }
 
 .navbar ul{
@@ -102,13 +111,13 @@ nav a:hover {
 
 #menuToggle a  {
     text-decoration: none;
-    color:rgb(50,50,50);
+    color:var(--charcoal);
 
     transition: color 0.3s ease;
 }
 
 #menuToggle a:hover {
-    color: rgb(248,188,0);
+    color:var(--jauneBg);
     text-decoration:overline;
 }
 
@@ -210,7 +219,7 @@ nav a:hover {
 #scrollTop {
     position: fixed;
     bottom: 20px;
-    right: 30px;
+    right: 50px;
     z-index: 10;
 }
 
@@ -237,8 +246,8 @@ h2 {
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     color: var(--charcoal);
     text-align: center;
-    padding: 15px;
-    margin: 15px 15px;
+    padding: 20px;
+    margin: 30px 15px;
 }
 
 .title {
@@ -248,6 +257,8 @@ h2 {
 
 .center {
     text-align: center;
+    margin-bottom: 20px;
+    padding: 20px 0;
 }
 
 .container {
@@ -260,7 +271,7 @@ h2 {
 .block {
     width: 100%;
     text-align: center;
-    padding: 15px;
+    padding: 40px;
 }
 
 i {
@@ -294,6 +305,8 @@ i {
     opacity: 0;
     transition: .5s ease;
     background-image: url(../img/hoverImg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .button {
@@ -314,18 +327,17 @@ i {
     color:var(--jauneBg);
     font-size: 80px;
     text-align: left;
-    padding: 0 85px;
+    padding: 0 55px;
 }
 
 .blockMockup {
     width: 100%;
-    padding: 0 20px;
+    padding: 20px 30px;
     justify-content: space-around;
     align-items: center;
 }
 .mockup {
     width: 70%;
-    padding: 70px 0;
 }
 
 .project {
@@ -367,7 +379,7 @@ i {
 }
 
 .aboutBlock2 {
-    padding: 20px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -378,6 +390,21 @@ i {
     background-color: #ededed;
     text-align: center;
     width: 50%;
+}
+
+.video {
+    text-align: center;
+    padding: 30px;
+    background-color: rgb(50,50,50);
+}
+
+.video h2 {
+    color: var(--jauneBg);
+}
+
+#videoSize {
+    max-width: 435px;
+    max-height: 435px;
 }
 
 /* Page Contact */
@@ -393,7 +420,7 @@ i {
 }
 
 .contactBlock {
-    background: rgba( 237, 237, 237, 0.70 );
+    background: rgba( 237,237,237,0.70);
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
@@ -478,7 +505,7 @@ i {
 
 /* Page Mentions Légales */
 .mentions {
-    padding: 20px;
+    padding: 30px;
 }
 
 
@@ -487,7 +514,7 @@ i {
 .contact {
     background-color: var(--jauneBg);
     text-align: center;
-    padding: 15px;
+    padding: 15px 0;
 }
 
 .white {
@@ -563,6 +590,9 @@ footer a:hover {
 
 /* Media Queries */
 @media only screen and (max-width: 840px) {
+    header {
+        margin-top: 0;
+    }
     h1 {
         font-size:60px;
     }
@@ -572,6 +602,10 @@ footer a:hover {
     }
     .navbarMobile {
         display: block;
+    }
+
+    .yellowBg {
+        margin: 20px 15px;
     }
 
     .container {
@@ -584,6 +618,11 @@ footer a:hover {
     .about {
         display: flex;
         flex-direction: column;
+    }
+
+    #videoSize {
+        max-width: 100%;
+        max-height: 100%;
     }
 
     .contactSection {
