portfolio sticky burger 19jun21

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@ font-family: 'Righteous', cursive;
 */
 /*rgba(0,0,0,0.6)*/
 
+html {
+    margin: 0; 
+    padding: 0; 
+    scroll-behavior: smooth;
+}
+
 header {
     background: url(../img/crayonBg.jpg) no-repeat;
     background-size: cover;
@@ -24,6 +30,8 @@ body {
     font-family: 'Raleway', sans-serif;
     background-color:#ededed;
     font-size: 1.2em;
+    margin: 0;
+    padding: 0;
 }
 
 h1, h1 a {
@@ -50,6 +58,13 @@ ul {
 }
 
 /* Navbar Desktop*/
+nav {
+    background-color: #ededed;
+    min-height: 50px;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 .navbar {
     display: flex;
     justify-content: space-around;
