--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ ul {
 nav {
     background-color: rgba( 237, 237, 237, 0.90 );
     box-shadow: 0px 0px 32px 0px rgba( 31, 38, 135, 0.37 );
-    min-height: 85px;
+    height: 85px;
     width: 100%;
     position: sticky;
     top: 0;
@@ -335,7 +335,8 @@ i {
     border-radius: 15px;
     font-family: 'Righteous', cursive;
     font-size: 1.7em;
-    color:var(--charcoal)
+    color:var(--charcoal);
+    padding: 0 10px;
 }
 
 .button:hover {
@@ -541,38 +542,32 @@ i {
     color: white;
 }
 
-form li{
-    list-style-type: none;
-    text-align: center;
-    font-size: 1.1em;
+.fa-envelope {
+    color:var(--charcoal);
 }
 
-button {
-    border: 1px solid white;
+.fa-envelope:hover {
+    color: white;
+}
+
+.fa-paper-plane {
+    color: white;
+    font-size: 1em;
+}
+
+.contactButton {
+    border: 2px solid white;
     background-color: transparent;
-    border-radius: 20px;
+    border-radius: 25px;
     font-family: 'Righteous', cursive;
     font-size: 1.7em;
     color: white;
     margin-top:20px;
+    padding: 0 10px;
 }
 
-button:hover {
+.contactButton:hover {
     color: var(--charcoal)
-}
-
-form input {
-    background-color: transparent;
-    border-radius: 20px;
-    padding: 10px;
-    margin: 15px;
-    font-size: 1em;
-}
-
-form textarea {
-    background-color: transparent;
-    border: 1px solid black;
-    font-size: 1.2em;
 }
 
 /* Footer */
@@ -606,11 +601,11 @@ footer a:hover {
 
 .stickyFooter {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 0;
     background-color: rgba( 237, 237, 237, 0.90 );
     box-shadow: 0px 0px 32px 0px rgba( 31, 38, 135, 0.37 );
-    max-height: 90px;
+    max-height: 85px;
     width: 100%;
     position: sticky;
     bottom: 0;
@@ -633,6 +628,7 @@ footer a:hover {
     .navbarMobile {
         display: block;
     }
+    
     nav img {
         width: 10%;
         position:fixed;
@@ -666,12 +662,27 @@ footer a:hover {
         flex-direction: column;
     }
 
-    .stickyFooter {
-        max-height: fit-content;
-    }
-
     footer i {
         font-size: 2.1em;
     }
     
+}
+
+@media only screen and (max-width: 660px) {
+    footer {
+        font-size: 0.6em;
+    }
+
+    footer i {
+        padding: 5px;
+    }
+
+    .stickyFooter {
+        height: fit-content;
+    }
+
+    #scrollTop {
+        font-size: 0.5em;
+    }
+
 }
