--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,8 @@ body {
     font-family: 'Raleway', sans-serif;
     background-color:#ededed;
     font-size: 1.2em;
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
