--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,6 @@ font-family: 'Righteous', cursive;
 */
 /*rgba(0,0,0,0.6)*/
 
-html {
-    margin: 0; 
-    padding: 0; 
-    scroll-behavior: smooth;
-}
-
 header {
     background: url(../img/crayonBg.jpg) no-repeat;
     background-size: cover;
@@ -26,6 +20,7 @@ header {
 }
 
 body {
+    overflow-x: hidden;
     font-family: 'Raleway', sans-serif;
     background-color:#ededed;
     font-size: 1.2em;
@@ -286,7 +281,6 @@ h2 {
     display: flex;
     justify-content:space-around;
     align-items:center;
-    text-align:center;
 }
 
 .block {
@@ -353,17 +347,14 @@ i {
 }
 
 .blockMockup {
+    width: 90%;
     margin: 20px 10px;
     padding: 20px;
-    justify-content: space-around;
     align-items: center;
+    text-align: center;
 }
 .mockup {
     width: 70%;
-}
-
-.project {
-    justify-content: center;
 }
 
 .separateur {
@@ -409,6 +400,7 @@ i {
 }
 
 .cv {
+    margin-top: 15px;
     background-color: #ededed;
     text-align: center;
     width: 50%;
@@ -616,6 +608,10 @@ footer a:hover {
 
 /* Media Queries */
 @media only screen and (max-width: 840px) {
+    body {
+        overflow-x: hidden;
+    }
+
     header {
         margin-top: 0;
     }
@@ -670,6 +666,10 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 660px) {
+    body {
+        overflow-x: hidden;
+    } 
+
     footer {
         font-size: 0.6em;
     }
