--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,6 +500,10 @@ i {
     width: 100%;
 }
 
+.mag {
+    width: 60%;
+}
+
 .below {
     background-color: var(--jauneBg);
     border: none;
@@ -526,6 +530,67 @@ i {
     text-align: center;
     padding: 15px;
 }
+
+
+/* Carousel */
+
+.slider {
+    width: 980px;
+    height: 1300px;
+    overflow: hidden;
+    margin: 70px auto;
+}
+.slides {
+    width: calc(980px * 6);
+    animation: glisse 15s infinite;
+}
+.slide {
+    float: left;
+}
+
+@keyframes glisse {
+    0% { transform: translateX(0);}
+    8% { transform: translateX(0);}
+    16% { transform: translateX(-980px);}
+    32% { transform: translateX(-980px);}
+    40% { transform: translateX(-1960px);}
+    48% { transform: translateX(-1960px);}
+    56% { transform: translateX(-2940px)}
+    64% { transform: translateX(-2940px);}
+    72% { transform: translateX(-3960px);}
+    80% { transform: translateX(-3960px);}
+    88% { transform: translateX(-4900px);}
+    96% { transform: translateX(-4900px);}
+    100% { transform: translateX(0);}
+}
+
+.slides2 {
+    width: calc(980px * 8);
+    animation: slide 25s infinite;
+}
+
+@keyframes slide {
+    0% { transform: translateX(0);}
+    6% { transform: translateX(0);}
+    12% { transform: translateX(0);}
+    18% { transform: translateX(0);}
+    24% { transform: translateX(-980px);}
+    30% { transform: translateX(-980px);}
+    36% { transform: translateX(-1960px)}
+    40% { transform: translateX(-1960px);}
+    46% { transform: translateX(-2940px);}
+    50% { transform: translateX(-2940px);}
+    56% { transform: translateX(-3960px);}
+    60% { transform: translateX(-3960px);}
+    66% { transform: translateX(-4900px)}
+    72% { transform: translateX(-4900px)}
+    78% { transform: translateX(-5880px)}
+    84% { transform: translateX(-5880px)}
+    90% { transform: translateX(-6860px)}
+    96% { transform: translateX(-6860px)}
+    100% { transform: translateX(0);}
+}
+
 
 /* Page Mentions Légales */
 .mentions {
@@ -680,6 +745,15 @@ footer a:hover {
     footer i {
         font-size: 2.1em;
     }
+
+    .slider {
+        width: 65%;
+        height: auto;
+    }
+
+    .fest {
+        width: 50%;
+    }
     
 }
 
@@ -710,6 +784,14 @@ footer a:hover {
 
     #scrollTop {
         font-size: 0.5em;
+    }
+
+    .slider {
+        width: 65%;
+        height: auto;
+    }
+    .fest {
+        width: 50%;
     }
 
 }
