--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ nav img {
 #menuToggle {
     display: block;
     position: relative;
-    top: 8px;
+    top: 0px;
     left: 30px;
 
     z-index: 1;
@@ -188,7 +188,7 @@ nav img {
     background: rgb(248,188,0);
 }
 
-/*But let's hide the middle one.*/
+/*But hide the middle one.*/
 #menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
@@ -223,7 +223,7 @@ nav img {
     font-size: 22px;
 }
 
-/* And let's slide it in from the left */
+/* Slide it in from the left */
 #menuToggle input:checked ~ ul {
     transform: none;
 }
@@ -542,7 +542,7 @@ i {
 }
 .slides {
     width: calc(980px * 6);
-    animation: glisse 15s infinite;
+    animation: glisse 25s infinite;
 }
 .slide {
     float: left;
@@ -680,6 +680,11 @@ footer a:hover {
     z-index: 5;
 }
 
+/*Lien brunchandbowl caché pour momm's */
+#brunch {
+    display: none;
+}
+
 
 /* Media Queries */
 @media only screen and (max-width: 840px) {
@@ -703,8 +708,8 @@ footer a:hover {
     
     nav img {
         width: 10%;
-        position:fixed;
-        top: 0;
+        position:relative;
+        top: 40px;
         left: 70px;
     }
 
