--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -709,7 +709,7 @@ footer a:hover {
     nav img {
         width: 10%;
         position:relative;
-        top: 5px;
+        top: 0;
         left: 70px;
     }
 
