--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -708,7 +708,7 @@ footer a:hover {
     
     nav img {
         width: 10%;
-        position:relative;
+        position: absolute;
         top: 0;
         left: 70px;
     }
