--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,7 @@ i {
     color: var(--jauneBg);
 }
 
-#videoSize {
+.videoSize {
     max-width: 435px;
     max-height: 435px;
 }
@@ -741,7 +741,7 @@ footer a:hover {
         flex-direction: column;
     }
 
-    #videoSize {
+    .videoSize {
         max-width: 100%;
         max-height: 100%;
     }
