--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,6 +698,10 @@ footer a:hover {
     h1 {
         font-size:60px;
     }
+
+    header h1 {
+        font-size:50px;
+    }
     
     .navbar {
         display: none;
